...
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:text="Phone Number"
                android:textSize="20sp"
                app:fontFamily="cursive"
                tools:layout_editor_absoluteX="85dp"
...
